# MARULHO

./: .gitignore  .gitmodules  AGENTS.md  AUDIT_REPORT.md  AUDIT_SUMMARY.txt  CONTEXT.md  GPCSN.md  HECSN_Paper_v2.md  HECSN_Paper_v4.md  HECSN_Progress_Report.md  HECSN_Tutorial.md  HECSN_Warm_Companion.md  IDEAS.md  LIVING_BRAIN_CLEANUP_MAP.md  PLAN-1.md  PLAN-2.md  PLAN.md  README.md  RESEARCH.md  SYSTEM_IMPLEMENTATION_PLAN.md  TERMINUS_Tutorial.md  Terminus_Cortex_Paper.md  conftest.py  feedback.md  hecsn.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini
.codex/: config.toml
.sandcastle/: .env.example  CODING_STANDARDS.md  Dockerfile  host-direct.mts  implement-prompt.md  main.mts  merge-prompt.md  pi-models.json  plan-prompt.md  review-prompt.md
.scratch/: prd-living-loop-deepening.md
docs/: autonomous-continual-language-runtime.md  research-living-brain.md  retired-paths.md
scripts/: _stability_test.py  build_vault.py  scale_test_10m.py  semantic_ab_eval.py  semantic_ablation.py  validate_vault_links.py  warm_alignment_study.py  warm_bootstrap_eval.py
tests/: __init__.py  test_abstraction_layer.py  test_abstraction_routing_runner.py  test_action_executor.py  test_action_loop.py  test_adaptive_context.py  test_adex.py  test_adex_backend_runner.py  test_adex_consolidation_runner.py  test_adex_stability_runner.py  test_adr_living_loop_deepening.py  test_adr_runtime_state_ownership.py  test_adr_service_manager_composition.py  test_approved_action_level2.py  test_arc_agi.py  test_artifact_io.py  test_autonomy_ladder.py  test_autonomy_planner.py  test_autonomy_runner.py  test_base_encoder.py  test_baselines.py  test_benchmark_reports.py  (+234 more)
(+681 files in other folders)
