[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hecsn"
version = "0.4.0"
description = "Hierarchical Episodic–Columnar Spiking Network"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "datasets",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
