[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marulho"
version = "0.4.0"
description = "MARULHO spiking cognitive runtime"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "datasets",
    "httpx",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pyright",
]

[tool.setuptools.packages.find]
where = ["src"]
