[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marulho"
version = "0.4.0"
description = "MARULHO-owned continual language model research runtime"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "datasets",
    "fsspec",
    "httpx",
    "tokenizers>=0.20,<1",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pyright",
]
cuda = [
  "ninja",
  "triton-windows; platform_system == 'Windows'",
  "triton; platform_system != 'Windows'",
]

[tool.setuptools.packages.find]
where = ["src"]
